--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 <div id="app">
   <div class="header">
+    <button class="again-btn">Again</button>
+    
     <h1 class="title">Guess My Number!</h1>
     <hr>
     <div class="box">
@@ -28,7 +30,7 @@
   <div class="results">
     <h2 class="message">Start guessing...</h2>
     <h2>💯 Score: <span class="score">20</span></h2>
-    <h2 class="highscore">🏅 Highscore: 0</h2>
+    <h2>🏅 Highscore: <span class="highscore">0</span></h2>
   </div>
 </div>
 
