--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 <div id="app">
   <div class="header">
+    <p class="login-guess"></p>
     <button class="again-btn">Again</button>
     
     <h1 class="title">Guess My Number!</h1>
