Fix code and design

--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
 <div id="app">
   <div class="header">
     <p class="login-guess"></p>
-    <button class="again-btn">Again</button>
-    
     <h1 class="title">Guess My Number!</h1>
     <hr>
     <div class="box">
@@ -25,7 +23,7 @@
   
   <div class="content">
     <input class="guess" type="number">
-    <button class="check">Check!</button>
+    <button class="check">Check</button>
   </div>
   
   <div class="results">
@@ -33,6 +31,8 @@
     <h2>💯 Score: <span class="score">20</span></h2>
     <h2>🏅 Highscore: <span class="highscore">0</span></h2>
   </div>
+  
+  <button class="again-btn">Again</button>
 </div>
 
 <script src="index.js"></script>
